[package]
name = "int_data_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
linfa-datasets = { version = "0.6.0", features = ["generate"] }
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-rand = "0.14.0"
approx = "0.5.1"
csv = { version = "1.1.6", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }

[dev-dependencies]
linfa = "0.6.0"
linfa-clustering = "0.6.0"
plotters = "0.3.1"
chrono = "0.4.22"
example_utils = { path = "lib/example_utils" }

[features]
csv = ["dep:csv"]
rand-xoshiro = ["dep:rand_xoshiro"]

[[bin]]
name = "gen-clusters"
path = "src/bin/gen_clusters.rs"
required-features = ["rand-xoshiro", "csv"]

[[example]]
name = "linfa-kmeans"
path = "examples/linfa_kmeans.rs"
required-features = ["rand-xoshiro", "csv"]

[[example]]
name = "my-kmeans"
path = "examples/my_kmeans.rs"
required-features = ["csv"]

[[example]]
name = "wine-quality"
path = "examples/wine_quality.rs"
required-features = ["csv"]

[profile.release]
lto = true
