[package]
name = "int_data_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
linfa-datasets = { version = "0.6.0", features = ["generate"] }
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-rand = "0.14.0"
approx = "0.5.1"

[dev-dependencies]
linfa = "0.6.0"
linfa-clustering = "0.6.0"
plotters = "0.3.1"
chrono = "0.4.22"
csv = "1.1.6"
rand_xoshiro = "0.6.0"
example_utils = { path = "lib/example_utils" }

[profile.release]
lto = true
