[package]
name = "int_data_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
csv = "1.1.6"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-rand = "0.14.0"
rand = "0.8.5"

[dev-dependencies]
chrono = "0.4.22"
linfa = "0.6.0"
linfa-clustering = "0.6.0"
linfa-datasets = { version = "0.6.0", features = ["generate"] }
plotters = "0.3.4"
rand_xoshiro = "0.6.0"

[profile.release]
lto = true
